cmake_minimum_required(VERSION 3.15)
project(BattleForHonour)

set(CMAKE_CXX_STANDARD 20)

add_executable(BattleForHonour
        main.cpp
        GameField/GameField.cpp
        GameField/GameField.h
        Objects/Unit.cpp
        Objects/Unit.h
        Weapon/Weapon.h
        Armor/Armor.h
        GameField/Point.h
        GameField/GameFieldIterator.h
        Objects/Units/Infantry/Infantry.h
        Weapon/WeaponType.h
        Armor/ArmorType.h
        Objects/Units/Druid/Druid.h
        Objects/Units/Archer/Archer.h
        Objects/Units/Infantry/SwordMan.h
        Objects/Units/Archer/CrossBowMan.h
        Objects/Units/Archer/LongBowMan.h
        Objects/Units/Infantry/SpearMan.h
        Objects/Units/Druid/Priestess.h
        Objects/Units/Druid/Hermit.h
        GameField/FieldCell.cpp
        GameField/FieldCell.h
        Terrains/Terrain.h
        Objects/Base.cpp
        Objects/Base.h
        Objects/Neutrals/NeutralObject.h
        Objects/GameObject.cpp
        Objects/GameObject.h
        Objects/Neutrals/Tent.h
        Objects/Neutrals/Hospital.h
        Objects/Neutrals/Well.h
        Terrains/TerrainProxy.cpp
        Terrains/TerrainProxy.h
        Objects/Neutrals/Archery.h
        Objects/Neutrals/NeutralObjectStrategy.h
        Objects/Neutrals/NeutralObjectStrategy.h
        Objects/Neutrals/ArcherStrategy.h
        Objects/Neutrals/InfantryStrategy.h
        Objects/Neutrals/DruidStrategy.h
        Armor/ArmorFlyweight.h
        Weapon/WeaponFlyweight.h
        Observers/Observers.h
        User/Commands/Command.h
        User/Commands/CreateBaseCommand.h
        User/Commands/CreateUnitCommand.h
        User/Commands/MoveUnitCommand.h
        User/Commands/ShowBaseCommand.h
        User/Commands/ShowUnitCommand.h
        User/Commands/ShowCommand.h
        User/Commands/CreateCommand.h
        User/Commands/MoveCommand.h
        User/Commands/SkipCommand.h
        Game/GameFacade.h
        Game/GameState.h
        User/Commands/AttackCommand.h
        User/Commands/AttackUnitCommand.h
        Logs/LogProxy.h
        Logs/Logger.h
        Logs/FileLogger.h
        Logs/CmdLogger.h
        Logs/NoLogger.h
        Logs/LogString.h
        Logs/Log.h
        User/Commands/ExitCommand.h
        Logs/LogEnd.h
        User/Commands/SaveCommand.h
        User/Commands/LoadCommand.h
        User/Commands/CommandSnapshot.h
        User/CommandInterpreter.h
        User/LoadCI.h
        GameSettings/SmallGame.h
        GameSettings/MidGame.h
        GameSettings/GameRule.h
        User/Commands/NewCommand.h
        User/Commands/NewGameCommand.h
        GameSettings/PlayerState.h
        GameSettings/BigGame.h
        GameSettings/HillKing.h
        Exceptions/StackExceptions.h
        Objects/UnitType.h User/Commands/SkipCommand.h Logs/Log.cpp Objects/ObjectType.h GameSettings/HillKing.h)